# cqrs-es-spec-kit-rs

./: .gitignore  .gitmodules  .mcp.json  AGENTS.md  Cargo.toml  GEMINI.md  README.md  docker-compose.yml  pnpm-workspace.yaml
.codex/: config.toml
.gemini/: settings.json
.serena/: project.yml
.serena/memories/: code_style_conventions.md  codebase_structure.md  design_patterns_guidelines.md  project_overview.md  suggested_commands.md  task_completion_checklist.md  tech_stack.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
apps/frontend/: package.json
apps/frontend/app/: layout.tsx
apps/frontend/modules/: README.md
apps/frontend/modules/user-admin-console/: README.md  index.ts
apps/frontend/modules/user-admin-console/components/: AuditLogViewer.tsx  UserDetailCard.tsx  UserListTable.tsx  UserStatusControl.tsx  index.ts
apps/frontend/modules/user-admin-console/lib/: filters.ts  index.ts  types.ts
apps/frontend/modules/user-self-service/: README.md  index.ts
apps/frontend/modules/user-self-service/components/: SignUpForm.tsx  UserProfileCard.tsx  WithdrawalConfirmation.tsx  index.ts
apps/frontend/modules/user-self-service/lib/: index.ts  types.ts  validators.ts
docs/: application-constraints.md  application-requirements.md  architecture-options.md  local-sandbox.md
scripts/: vibe-kanban.sh
scripts/localstack/: bootstrap.sh  deploy-lambdas.sh
specs/001-add-user-management/: data-model.md  plan.md  quickstart.md  research.md  spec.md
specs/001-add-user-management/checklists/: requirements.md
specs/001-add-user-management/contracts/: schema.graphql
specs/001-init-user-management/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-init-user-management/checklists/: requirements.md
specs/001-init-user-management/contracts/: schema.graphql
src/: domain.rs  lib.rs
src/domain/: user.rs
src/domain/user/: aggregate.rs  commands.rs  errors.rs  events.rs  mod.rs  user_aggregate.rs  user_event.rs  user_id.rs  value_objects.rs
src/infrastructure/event_store/: mod.rs  user_event_store.rs
